--- a/index.html
+++ b/index.html
@@ -1,5 +1,28 @@
+<!doctype html>
 <html>
-    <body>
-        <p>hbgvfctgyhu</p>
-    </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./assets/css/root.css">
+</head>
+<body>
+    <section class="bg-[url('./assets/images/bg1.jpg')] bg-cover bg-center h-screen">
+        <nav>
+            <div class="text-3xl tracking-wider flex h-full w-full space-x-16 justify-between items-center px-24 pt-8">
+                <div>
+                    <a href="" class="text-3xl tracking-wider">JAAN-Network</a>
+                </div>
+                    <div class="flex h-full space-x-8 orbitron justify-center items-center rounded-[30px] opacity-75 bg-[#D9D9D999]">
+                        <a href="" class="text-black px-8 py-4 flex items-center justify-center">About us</a>
+                        <a href="" class="text-black px-8 flex items-center justify-center">Careers</a>
+                        <a href="" class="text-black px-8 flex items-center justify-center">Projects</a>
+                        <a href="" class="text-black px-8 flex items-center justify-center">Contact</a>
+                        <a href="" class="text-black px-8 flex items-center justify-center">Our Partners</a>  
+                    </div>
+            </div>
+      </nav>
+    </section>
+</body>
 </html>
